fixed bug on input with extra spaces

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 .word_box {
-	background-color: #dddddd;
+	background-color: #eeeeee;
 	border-style: solid; border-color: #bbbbbb; border-radius: 2px;
 	color: #4285f4;
 	display: inline-block;
